Modified plot to have blue fill

--- a/practice_plot_github.html
+++ b/practice_plot_github.html
@@ -369,7 +369,7 @@ summary {
 </div>
 
 
-<pre class="r"><code>ggplot(iris, aes(x = Sepal.Length)) + geom_histogram() -&gt; p
+<pre class="r"><code>ggplot(iris, aes(x = Sepal.Length)) + geom_histogram(fill = &quot;blue&quot;) -&gt; p
 ggsave(&quot;practice_plot.png&quot;, p)</code></pre>
 <pre><code>## Saving 7 x 5 in image</code></pre>
 <pre><code>## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.</code></pre>
